<resources>
    <string name="app_name">Calculator App</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="sex">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="equale">=</string>
    <string name="divide">/</string>
    <string name="multyplay">*</string>
    <string name="addition">+</string>
    <string name="subtraction">-</string>

    <string name="clear">C</string>
    <string name="plus.minus">+/-</string>
    <string name="point">.</string>
    <string name="DEL">DEL</string>



</resources>