<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/TL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="182dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnSeven"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/seven" />

            <Button
                android:id="@+id/btnEight"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/eight" />

            <Button
                android:id="@+id/btnNine"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/nine" />

            <Button
                android:id="@+id/btnDivide"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:text="@string/divide" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnFour"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/four" />

            <Button
                android:id="@+id/btnFive"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/five" />

            <Button
                android:id="@+id/btnSex"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/sex" />

            <Button
                android:id="@+id/btnMultyplay"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:text="@string/multyplay" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnOne"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/one" />

            <Button
                android:id="@+id/btnTwo"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/two" />

            <Button
                android:id="@+id/btnThree"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/three" />

            <Button
                android:id="@+id/btnSub"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:text="@string/subtraction" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnPlusMinus"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/plus.minus" />

            <Button
                android:id="@+id/btnZero"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/zero" />

            <Button
                android:id="@+id/btnPoint"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/point" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:text="@string/addition" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnDEL"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginEnd="5dp"

                android:layout_weight="1"
                android:text="@string/DEL" />

            <Button
                android:id="@+id/btnClear"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/clear" />

            <Button
                android:id="@+id/btnEqule"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="2"
                android:text="@string/equale" />
        </TableRow>
    </TableLayout>

    <RelativeLayout
        android:id="@+id/LDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#009688"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/TL"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59000003"
        tools:layout_editor_absoluteX="٠dp">

        <TextView
            android:id="@+id/tvDiaplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingTop="20dp"
            android:text="0"
            android:textColor="#FFFFFF"
            android:textSize="34sp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>